--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Connect_Hub
 endorsed.classpath=
 excludes=
-file.reference.json-simple-1.1.1__1_.jar=../../../Downloads/json-simple-1.1.1 (1).jar
+file.reference.json-20240303.jar=../../../../Downloads/json-20240303.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1__1_.jar}
+    ${file.reference.json-20240303.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
