--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Connect_Hub
 endorsed.classpath=
 excludes=
-file.reference.json-20240303.jar=../../../../Downloads/json-20240303.jar
+file.reference.json-20240303.jar=C:\\Users\\sarar\\OneDrive\\Desktop\\json-20240303.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -80,7 +80,7 @@ main.class=connect.hub.ConnectHub
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK-21
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
