login & signup frontend

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Connect_Hub
-main.class=connect.hub.ConnectHub
+main.class=Backend.ConnectHub
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
