second commit for content creation

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\King Technology\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\alaae\\AppData\\Roaming\\NetBeans\\23\\build.properties
