--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Connect_Hub
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=../../../../Downloads/jcalendar-1.4.jar/jcalendar-1.4.jar
 file.reference.json-20240303.jar=../../../../Downloads/json-20240303.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20240303.jar}
+    ${file.reference.json-20240303.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
