--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Connect_Hub
 endorsed.classpath=
 excludes=
+file.reference.gson-2.10.1.jar=../../../../Downloads/gson-2.10.1.jar
 file.reference.json-20210307.jar=../Downloads/json-20210307.jar
 includes=**
 jar.compress=false
@@ -147,7 +148,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-20240303.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.gson-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
