--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,9 @@ dist.jlink.output=${dist.jlink.dir}/Connect_Hub
 endorsed.classpath=
 excludes=
 file.reference.gson-2.10.1.jar=../../../../Downloads/gson-2.10.1.jar
+file.reference.jcalendar-1.4.jar-1=..\\..\\Downloads\\jcalendar-1.4.jar
 file.reference.json-20210307.jar=../Downloads/json-20210307.jar
+file.reference.json-20240303.jar-1=..\\..\\Downloads\\json-20240303.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -149,7 +151,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.json-20240303.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.gson-2.10.1.jar}
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.json-20240303.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
